--- a/demo-sb2/src/main/resources/static/index.html
+++ b/demo-sb2/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Calculadora</a>
+                        <a class="nav-link active" aria-current="page" href="#" onclick="abrirCalculadora()">Calculadora</a>
                     </li>
                     
                     
@@ -28,7 +28,9 @@
             </div>
         </div>
     </nav>
+    <main class="container"></main>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
