--- a/demo-sb2/src/main/resources/static/index.html
+++ b/demo-sb2/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto 2</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/calculadora.css">
 </head>
 
 <body>
@@ -28,6 +29,10 @@
             </div>
         </div>
     </nav>
+
+    
+
+
     <main class="container"></main>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
