Ajuste mensaje de alerta

--- a/demo-sb2/src/main/resources/static/index.html
+++ b/demo-sb2/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
     <title>Proyecto 2</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/calculadora.css">
+    <link rel="stylesheet" href="ico/page.svg">
 </head>
 
 <body>
@@ -30,10 +31,16 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div id="liveAlertPlaceholder"></div>
+        <main ></main>
+
+    </div>
     
 
 
-    <main class="container"></main>
+
+    
     <script src="js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
 </body>
